print and plot functions for bmdboot and a help page (bmdboot.Rd)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,3 +26,8 @@ S3method(plot, drcfit)
 export(bmdcalc)
 S3method(print, bmdcalc)
 S3method(plot, bmdcalc)
+
+#bmdboot class
+export(bmdboot)
+S3method(print, bmdboot)
+S3method(plot, bmdboot)
