First step for taking into account RNAseq data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ import(stats)
 import(graphics)
 import(ggplot2)
 importFrom("limma", normalizeBetweenArrays, lmFit, eBayes, topTable)
+importFrom("DESeq2", rlog, vst, DESeq, results, DESeqDataSetFromMatrix)
 importFrom("utils", txtProgressBar, setTxtProgressBar, read.table)
 importFrom("grDevices", pdf, dev.off)
 
@@ -12,6 +13,11 @@ importFrom("grDevices", pdf, dev.off)
 export(omicdata)
 S3method(print, omicdata)
 S3method(plot, omicdata)
+
+#RNAseqdata class
+export(RNAseqdata)
+S3method(print, RNAseqdata)
+S3method(plot, RNAseqdata)
 
 #itemselect class
 export(itemselect)
