Corection on the .Rd files, add of a smaller RNAseq data set to run in examples and tests, add of the deprecated function omicdata and complete removing of the deprecated class "omicdata"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ importFrom("grDevices", pdf, dev.off)
 
 #microarraydata class
 export(microarraydata)
+export(omicdata) # deprecated function
 S3method(print, microarraydata)
 S3method(plot, microarraydata)
 
