--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,8 @@ install:
 
 build_script:
   - travis-tool.sh install_deps
+  - travis-tool.sh bioc_install limma
+  - travis-tool.sh bioc_install DESeq2
 
 test_script:
   - travis-tool.sh run_tests
