Update R-CMD-check.yaml: add libcurl librairy for Linux

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -40,7 +40,12 @@ jobs:
           r-version: ${{ matrix.config.r }}
 
       - uses: r-lib/actions/setup-pandoc@v1
-
+      
+      - name: Install libraries for Linux
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt-get install libcurl14-openssl-dev
+          
       - name: Install bioconductor packages
         run: |
           install.packages("BiocManager")
