Update urls (lbbe.univ-lyon1.fr)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,5 +13,5 @@ License: GPL (>= 2)
 VignetteBuilder: knitr
 BuildVignettes: true
 Encoding: UTF-8
-URL: https://lbbe.univ-lyon1.fr/-DRomics-.html, https://github.com/aursiber/DRomics
+URL: https://lbbe.univ-lyon1.fr/fr/dromics, https://github.com/aursiber/DRomics
 Contact: Marie-Laure Delignette-Muller <marielaure.delignettemuller@vetagro-sup.fr>
