Update R-CMD-check.yaml: reverse the last chnages about the intallation of Bioconductor packages with the devel version of R

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -25,7 +25,7 @@ jobs:
           - {os: windows-latest, r: 'release'}
           - {os: macOS-latest, r: 'release'}
           - {os: ubuntu-20.04, r: 'release', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
-          - {os: ubuntu-20.04, r: 'devel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
+          # - {os: ubuntu-20.04, r: 'devel', rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest"}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
@@ -49,7 +49,7 @@ jobs:
       - name: Install bioconductor packages
         run: |
           install.packages("BiocManager")
-          BiocManager::install(c('DESeq2','limma'), version = "devel")
+          BiocManager::install(c('DESeq2','limma'))
         shell: Rscript {0}
           
       - name: Query dependencies
