Update the R-CMD-check github workflow: add the installation of 'SummarizedExperiment'

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -49,7 +49,7 @@ jobs:
       - name: Install bioconductor packages
         run: |
           install.packages("BiocManager")
-          BiocManager::install(c('DESeq2','limma'))
+          BiocManager::install(c('DESeq2','limma', "SummarizedExperiment"))
         shell: Rscript {0}
           
       - name: Query dependencies
