--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -96,8 +96,9 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck
+          extra-packages: any::rcmdcheck, any::XML
           needs: check
+          # See https://github.com/r-lib/actions/issues/559 for the XML issue
 
       - uses: r-lib/actions/check-r-package@v2
         with:
