--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -53,6 +53,7 @@ jobs:
           
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
+          pak-version: devel
           extra-packages: any::rcmdcheck, any::XML
           needs: check
           # See https://github.com/r-lib/actions/issues/559 for the XML issue
