Add options in the _pkgdown.yml file to improve the rendering of the github.io site

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,13 +2,16 @@ template:
   bootstrap: 5
   bootswatch: flatly
 
-  bslib:
-    primary: "#433625"
-    navbar-background: "#9c5c16"
+bslib:
+  primary: "#433625"
+  navbar-background: "#9c5c16"
     
   trailing_slash_redirect: true
 
-  navbar:
-    structure:
-      left:  [intro, reference, articles, tutorials, news]
-      right: [search, github]
+navbar:
+  structure:
+    left:  [intro, reference, articles, tutorials, news]
+    right: [search, github]
+    
+toc:
+  depth: 4  
