Add of selectitems in the package

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(trendplot)
 export(sensitivityplot)
 export(bmdplot)
 export(selectgroups)
+export(selectitems)
 export(PCAdataplot)
 export(formatdata4DRomics)
 
