Update the R-CMD-check workflow: install openssl for macos

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -45,6 +45,10 @@ jobs:
         run: |
           sudo apt-get install libcurl4-openssl-dev
           
+      - name: Install libs for MacOS
+        if: runner.os == 'MacOS'
+        run: brew install openssl
+          
       - name: Install bioconductor packages
         run: |
           install.packages("BiocManager")
