--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,6 @@ License: GPL (>= 2)
 VignetteBuilder: knitr
 BuildVignettes: true
 Encoding: UTF-8
-URL: https://lbbe.univ-lyon1.fr/fr/dromics, https://aursiber.github.io/DRomics/
+URL: https://lbbe.univ-lyon1.fr/fr/dromics, https://lbbe-software.github.io/DRomics/
 Contact: Marie-Laure Delignette-Muller <marielaure.delignettemuller@vetagro-sup.fr>
-BugReports: https://github.com/aursiber/DRomics/issues
+BugReports: https://github.com/lbbe-software/DRomics/issues
