Update R-CMD-check workflow: install 'pkg-config' on Mac to fix the svglite installation issue

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -48,7 +48,7 @@ jobs:
       - name: Install libraries for macOS
         if: runner.os == 'macOS'
         run: |
-          brew install libpng
+          brew install pkg-config
           
       - name: Install bioconductor packages
         run: |
